--- a/src/genweb6/serveistic/locales/en/LC_MESSAGES/genweb6.serveistic.po
+++ b/src/genweb6/serveistic/locales/en/LC_MESSAGES/genweb6.serveistic.po
@@ -443,7 +443,7 @@ msgstr "ES value"
 
 #: ./genweb/serveistic/setuphandlers.py:26
 msgid "category_freq_anual"
-msgstr ""
+msgstr "Yearly"
 
 #: ./genweb/serveistic/setuphandlers.py:20
 msgid "category_freq_diaria"
